<resources>

    <string name="app_name">com.zhsystem.meeting</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    
	<!--登陆模块  -->
	<string name="login_title">中环会务管理系统</string>
	<string name="login_username">用户名：</string>
	<string name="login_password">密\u3000码：</string>
	<string name="today">今天</string>
	<string name="weather_today">今</string>
	<string name="year">年</string>
	<!--首页  -->
	<string name="menu_home">首页</string>
	<string name="menu_meeting">会议</string>
	<string name="menu_singin">签到</string>
	<string name="menu_setting">设置</string>
	<!--会议模块 -->
	<!--签到模块  -->
	<!--设置模块  -->
	<!--推送 -->
	<!--其他  -->
</resources>