<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >
	<RelativeLayout 
	 android:layout_width="fill_parent"
	 android:layout_height="60dip"
	 android:id="@+id/top_layout"
	 android:background="@drawable/main_top_bg"
	    >
	<ImageView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:background="#00000000"
	 android:src="@drawable/menu_btn_bg"  
	 android:scaleType="centerInside"
	 android:id="@+id/mian_menu_btn"   
	 android:layout_marginLeft="-13dip"
	    
	    />    
	<RelativeLayout 
	 android:layout_width="fill_parent"
	 android:layout_height="fill_parent"
	 android:layout_toRightOf="@+id/mian_menu_btn"
	 android:layout_marginLeft="5dip"
	 android:layout_marginRight="10dip"	    
	    >
	 <ImageView 
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:background="#00000000"
	 android:src="@drawable/a_1"
	 android:scaleType="centerInside"   
	 android:id="@+id/weather_image" 
	 android:layout_centerVertical="true"     
	     />   
	<TextView 
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"   
	 android:textSize="@dimen/text_size_login"
	 android:textStyle="bold"   
	 android:layout_toRightOf="@+id/weather_image" 
	 android:id="@+id/weather_txt"  
	 android:text="雷阵雨"  
	 android:textColor="@color/white"
	 android:layout_marginTop="10dip"
	 android:layout_marginLeft="10dip"
	    />    
	 <TextView 
	 android:layout_toRightOf="@+id/weather_image" 
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"   
	 android:textSize="@dimen/text_size_login"
	 android:textStyle="bold"   
	 android:layout_below="@+id/weather_txt" 
	 android:text="温度"  
	 android:textColor="@color/white"
	 android:layout_marginTop="5dip"
	 android:layout_marginLeft="10dip"
	    />       
	 <Button 
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"     
	 android:layout_centerVertical="true"    
	 android:background="@drawable/weather_taday_btn"    
	 android:text="@string/weather_today" 
	 android:gravity="center"
	 android:textSize="@dimen/text_size_login"
	 android:textColor="@color/white"
	 android:layout_alignParentRight="true"   
	     />   
	</RelativeLayout>    
	    
	    
	    
	    
	</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@drawable/cal_top_background" 
        android:id="@+id/date_show_layout">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_year"
            android:layout_centerVertical="true"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_month	"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/year"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/now_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_date"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_pre_month"
            android:layout_width="25dip"
            android:layout_height="20dip"
            android:layout_marginRight="20dip"
            android:layout_toLeftOf="@+id/btn_next_month"
            android:background="@drawable/previous_month"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/btn_next_month"
            android:layout_width="25dip"
            android:layout_height="20dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:layout_centerVertical="true"
            android:background="@drawable/next_month" />
    </RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:id="@+id/title_iamge_layout"
	    >
	 <ImageView
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:background="#00000000"
        android:scaleType="centerInside"
        android:src="@drawable/cal_content_top_background"
        android:contentDescription="@null" >
    </ImageView>   
	    
	</RelativeLayout>
    

    <LinearLayout
        android:id="@+id/cal_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>


</LinearLayout>